# simple-web-search-agent

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260328_01_initial_schema.py  20260328_02_chat_memories.py
backend/app/: config.py  main.py
backend/app/agent/: chat_agent.py  registry.py  research_agent.py
backend/app/api/: auth_routes.py  routes.py
backend/app/auth/: dependencies.py  google.py  security.py
backend/app/core/: llm.py
backend/app/db/: bootstrap.py  models.py  session.py
backend/app/repositories/: agents.py  memories.py  messages.py  runs.py  threads.py  users.py
backend/app/services/: auth_service.py  chat_service.py  memory_service.py  run_service.py
backend/app/tools/: finance.py  scrape.py  search.py  summarize.py
frontend/: components.json  index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AuthScreen.jsx  Search.jsx
frontend/src/components/ui/: badge.jsx  button.jsx  card.jsx  input.jsx  select.jsx  textarea.jsx
frontend/src/hooks/: use-agents.js  use-auth.js  use-chat.js  use-research.js
frontend/src/lib/: api.js
