[project]
name = "web-research-mcp-backend"
version = "0.1.0"
description = "FastAPI backend for Web Research MCP"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "fastapi==0.135.2",
  "pydantic-settings>=2.6.1",
  "psycopg[binary]==3.3.3",
  "requests>=2.32.3",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.0",
]

[tool.uv]
package = false
